# Spark-Idea-System

./: .dockerignore  DESIGN_GUIDANCE.md  README.md  SKILL.md  apex-modern.css  backend.Dockerfile  dev.sh  docker-compose.dev.yml  docker-compose.yml  frontend.Dockerfile  main.py  pyproject.toml  universal_template.html
backend/: ai_utils.py  badges.json  database.py  db_check.py  main.py  migrate_db.py  migrate_gamification.py  models.py  schemas.py  spark.db  spark.db.old
backend/static/: auth.js  modal.js  style.css
backend/static/icons/: README.md
backend/templates/: admin.html  base.html  index.html  login.html  profile.html  sparks.html  visualizations.html
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/sparks/: page.tsx
frontend/src/app/visualizations/: page.tsx
frontend/src/components/: AuthWrapper.tsx  BadgeGrid.tsx  BadgeIcon.tsx  Header.tsx  IdeaCard.tsx  IdeaModal.tsx  PageTemplate.tsx  PromptHeader.tsx  Sidebar.tsx  StatusTag.tsx  Tooltip.tsx
frontend/src/context/: AchievementContext.tsx  AuthContext.tsx
